[android_webview] Do not declare WebView visible on detaching from window.

We have been pretending that WebView is visible for the Blink API
(OnShown/OnHidden) if WebView is not attached to a window. This makes
some operations work in background.

This CL eliminates the case when the WebView is declared visible
upon detach from window. Now the WebView is considered visible if it
has never been attached, but once it is attached, every subsequent
detach sets it invisible.

BUG=675950

Review-Url: https://codereview.chromium.org/2637273002
Cr-Commit-Position: refs/heads/master@{#444588}

Former-commit-id: 9288679e3eb12c219b520c6327ac5ab9a7741cb5