android_webview/browser/browser_view_renderer_unittest.cc
@@ -291,6 +291,54 @@ class CompositorNoFrameTest : public RenderingTest {
 
 RENDERING_TEST_F(CompositorNoFrameTest);
 
+class ClientIsVisibleOnConstructionTest : public RenderingTest {
+  void SetUpTestHarness() override {
+    browser_view_renderer_.reset(
+        new BrowserViewRenderer(this, base::ThreadTaskRunnerHandle::Get()));
+  }
+
+  void StartTest() override {
+    EXPECT_FALSE(browser_view_renderer_->attached_to_window());
+    EXPECT_FALSE(browser_view_renderer_->window_visible_for_tests());
+    EXPECT_TRUE(browser_view_renderer_->IsClientVisible());
+    EndTest();
+  }
+};
+
+RENDERING_TEST_F(ClientIsVisibleOnConstructionTest);
+
+class ClientIsVisibleAfterAttachTest : public RenderingTest {
+  void StartTest() override {
+    EXPECT_TRUE(browser_view_renderer_->attached_to_window());
+    EXPECT_TRUE(browser_view_renderer_->window_visible_for_tests());
+
+    EXPECT_TRUE(browser_view_renderer_->IsClientVisible());
+    EndTest();
+  }
+};
+
+RENDERING_TEST_F(ClientIsVisibleAfterAttachTest);
+
+class ClientIsInvisibleAfterWindowGoneTest : public RenderingTest {
+  void StartTest() override {
+    browser_view_renderer_->SetWindowVisibility(false);
+    EXPECT_FALSE(browser_view_renderer_->IsClientVisible());
+    EndTest();
+  }
+};
+
+RENDERING_TEST_F(ClientIsInvisibleAfterWindowGoneTest);
+
+class ClientIsInvisibleAfterDetachTest : public RenderingTest {
+  void StartTest() override {
+    browser_view_renderer_->OnDetachedFromWindow();
+    EXPECT_FALSE(browser_view_renderer_->IsClientVisible());
+    EndTest();
+  }
+};
+
+RENDERING_TEST_F(ClientIsInvisibleAfterDetachTest);
+
 class ResourceRenderingTest : public RenderingTest {
  public:
   using ResourceCountMap = std::map<cc::ResourceId, int>;
